# MechCommander2-Restoration-Project

./: .gitignore  CMakeLists.txt  CUSTOM-CAMPAIGNS.md  README.md  claude.md
GameOS/gameos/: gameos.cpp  gameos_graphics.cpp  gameosmain.cpp  gos_render.cpp
GameOS/include/: gameos.hpp  memorymanager.hpp
archive/fmv-dead-code/: README.md
archive/fmv-dead-code/code/: fmv_test_framework.cpp  fmv_test_runner.cpp  frame_rate_fix.cpp  frame_rate_fix.h  mc2movie.cpp  mc2movie.h  mp4player_test_extension.cpp  mp4player_test_extension.h  standalone_mp4_player.cpp  test_metrics.h  video_position_fix.cpp  video_position_fix.h  video_validator.cpp
archive/fmv-dead-code/docs/: CLAUDE_md_fmv_history.md  FMV_TESTING_GUIDE.md  VIDEO_FIXES_SUMMARY.md
archive/fmv-dead-code/scripts/: CMakeListsTestAddition.txt  debug_output.txt  fmv_quick_test.txt  mp4_standalone_test.ps1  quick_fmv_test.ps1  test_fmv.ps1  test_videos.ps1
code/: clean_mp4_player.cpp  controlgui.cpp  controlgui.h  forcegroupbar.cpp  logistics.cpp  logistics.h  logisticsdialog.cpp  mainmenu.cpp  mainmenu.h  mc2movie.h  mechcmd2.cpp  mechicon.cpp  mechicon.h  missionselectionscreen.cpp  missionselectionscreen.h  mp4player.cpp  mp4player.h
devlogs/: FMV_DESIGN.md  FMV_STATUS.md  archived_local_branches.md  briefing_map_black_textures_2026-04-25.md  compass_investigation_2026-04-25.md  fonts_d3f_loader_2026-04-25.md  mission_editor_tier0_plan.md  mission_select_stray_lines_2026-04-25.md  project_state.md  release_packaging_2026-04-24.md  release_packaging_2026-04-25_shaders_fix.md  thranduil_fork_test_notes_2026-04-24.md
devlogs/closed/: FMV_ARCHAEOLOGY.md  FMV_REFERENCE_NOTES.md  FMV_RENDERING_RECON.md  compass_investigation_2026-04-25.md  fonts_d3f_loader_2026-04-25.md
devlogs/followups/: alariq-pr-waits.md  auto-detect-resolution.md  briefing-map-black-textures.md  distribution-license-anchor.md  font-rendering-regression.md  font-tweaks-residual.md  input-multimonitor-1px-residual.md  intro-cinema1-misplaced.md  mission-editor-tier0.md  mission-select-stray-lines.md  night-mission-rendering.md  release-installer.md
gui/: abutton.cpp
mclib/: txmmgr.cpp
